--- a/app/src/main/res/layout/activity_booking_information.xml
+++ b/app/src/main/res/layout/activity_booking_information.xml
@@ -44,6 +44,7 @@
             <RatingBar
                 android:id="@+id/ratingBar"
                 android:numStars="5"
+                android:isIndicator="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
