--- a/app/src/main/res/layout/fragment_worker_schedule.xml
+++ b/app/src/main/res/layout/fragment_worker_schedule.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.jayvee.dirtoffseeker.WorkerScheduleFragment">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textView"
         android:text="Monthly"
         android:padding="10dp"
@@ -17,6 +17,14 @@
     <ListView
         android:padding="10dp"
         android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />-->
+
+    <TextView
+        android:id="@+id/textView"
+        android:text="By Bulk (One Day Service)"
+        android:padding="10dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
