--- a/app/src/main/res/layout/activity_worker_profile.xml
+++ b/app/src/main/res/layout/activity_worker_profile.xml
@@ -36,6 +36,22 @@
 
         </android.support.v7.widget.Toolbar>
 
+        <RatingBar
+            android:id="@+id/ratingBar"
+            android:numStars="5"
+            android:layout_gravity="center"
+            android:isIndicator="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:text="Ratings"
+            android:gravity="center"
+            android:textColor="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
