--- a/app/src/main/res/layout/fragment_worker_profile.xml
+++ b/app/src/main/res/layout/fragment_worker_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="50dp"
+    android:paddingTop="130dp"
     android:orientation="vertical"
     tools:context="com.example.jayvee.dirtoffseeker.WorkerProfileFragment">
 
@@ -17,6 +17,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="First Name:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -26,6 +27,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -41,6 +43,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Middle Name:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -50,6 +53,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -65,6 +69,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Last Name:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -74,6 +79,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -89,6 +95,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Email:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -98,6 +105,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -113,6 +121,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Contact No:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -122,6 +131,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -138,6 +148,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Address:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -147,6 +158,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -162,6 +174,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Birthday:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -171,6 +184,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -186,6 +200,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Date Applied:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -195,6 +210,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -211,6 +227,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Status:"
+            android:textColor="@color/black"
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -220,6 +237,7 @@
             android:padding="10dp"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
             android:text="Field"
+            android:textColor="@color/black"
             android:layout_weight="0.7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
